--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
-buildscript {
-	ext {
-		queryDslVersion = "5.0.0"
-	}
-}
+//buildscript {
+//	ext {
+//		queryDslVersion = "5.0.0"
+//	}
+//}
 
 plugins {
 	id 'org.springframework.boot' version '2.7.5'
@@ -21,7 +21,7 @@ repositories {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -32,7 +32,6 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
