--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,8 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
+    database: h2
+  h2:
+    console:
+      enabled: true
