--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'net.datafaker:datafaker:1.7.0'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// qdsl 추가
 //	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
