--- a/build.gradle
+++ b/build.gradle
@@ -32,13 +32,15 @@ dependencies {
 //	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-
+	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 	implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.7.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.graphql:spring-graphql-test'
+
 
 }
 
